--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sass": "^1.79.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
